boreal/tests/assets/invalid_files/compilation/invalid_identifier_use.yar
// [error: wrong use of identifier]
import "tests"

rule c {
    condition:
        tests.string_array == /aab/
}
